--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/schedule_publishing.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/schedule_publishing.html.erb
@@ -89,16 +89,26 @@
           },
         ],
       } %>
-      <div class="govuk-button-group govuk-!-margin-bottom-6">
-        <%= render "govuk_publishing_components/components/button", {
-          text: "Accept and publish",
-          name: "accept_and_publish",
-          value: "Accept and publish",
-          type: "submit",
-        } %>
-        <%= link_to("Cancel", content_block_manager.content_block_manager_content_block_documents_path, class: "govuk-link") %>
-      </div>
-    <% end %>
 
+      <div class="govuk-button-group">
+        <div>
+          <%= render "govuk_publishing_components/components/button", {
+            text: "Accept and publish",
+            name: "accept_and_publish",
+            value: "Accept and publish",
+            type: "submit",
+          } %>
+      <% end %>
+        </div>
+        <div>
+          <%= render partial: "content_block_manager/content_block/shared/cancel_delete_button",
+                     locals: {
+                       url: content_block_manager.content_block_manager_content_block_edition_path(
+                         @content_block_edition,
+                         redirect_path: content_block_manager.content_block_manager_content_block_document_path(@content_block_edition.document),
+                       ),
+                     } %>
+        </div>
+      </div>
   </div>
 </div>
