use a 'Cancel' button on new forms for Content Block
this doesn't need to delete the Edition as a new
one hasn't been created yet. Using a button to be
consisten with style of other forms.

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/shared/_form.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/shared/_form.html.erb
@@ -52,6 +52,10 @@
       value: "Save and continue",
       type: "submit",
     } %>
-    <%= link_to("Cancel", @form.back_path, class: "govuk-link") %>
+    <%= render "govuk_publishing_components/components/button", {
+      text: "Cancel",
+      href: @form.back_path,
+      secondary_solid: true,
+    } %>
   </div>
 <% end %>
