--- a/app/views/admin/organisations/features.html.erb
+++ b/app/views/admin/organisations/features.html.erb
@@ -32,7 +32,7 @@
       label: "Currently featured",
       content: render(Admin::CurrentlyFeaturedTabComponent.new(
         features: @feature_list.features.current,
-        maximum_featured_documents: @organisation.class::FEATURED_DOCUMENTS_DISPLAY_LIMIT,
+        maximum_featured_documents: @organisation.featured_documents_display_limit,
       )),
     },
     {
