--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
@@ -11,9 +11,13 @@
 </div>
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-  <% @content_block_documents.each do |content_block_document| %>
-    <%= render ContentBlockManager::ContentBlock::Document::Index::SummaryCardComponent.new(content_block_document:) %>
-  <% end %>
+  <div class="govuk-grid-column-one-third">
+    <%= render "filter_options" %>
+  </div>
+  <div class="govuk-grid-column-two-thirds">
+    <h2 class="govuk-heading-m"><%= pluralize(@content_block_documents.count, "result") %></h2>
+    <% @content_block_documents.each do |content_block_document| %>
+      <%= render ContentBlockManager::ContentBlock::Document::Index::SummaryCardComponent.new(content_block_document:) %>
+    <% end %>
   </div>
 </div>
