--- a/app/views/admin/preview/preview.html.erb
+++ b/app/views/admin/preview/preview.html.erb
@@ -1,7 +1,7 @@
 <section>
   <article class="document">
     <div class="body">
-      <%= govspeak_to_admin_html params[:body], @images, @attachments, @alternative_format_contact_email %>
+      <%= govspeak_to_admin_html params[:body], @images, @attachments, @embeds, @alternative_format_contact_email %>
     </div>
   </article>
 </section>
