add Cancel button to block type page
This button will be added to every page in the
create journey shortly, but in spirit of doing
smaller chunks just adding this to the first page
now.

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/_schemas.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/_schemas.html.erb
@@ -14,10 +14,19 @@
     schemas: @schemas,
   ) %>
 
-  <%= render "govuk_publishing_components/components/button", {
-    text: "Save and continue",
-    name: "save_and_continue",
-    value: "Save and continue",
-    type: "submit",
-  } %>
+  <div class="govuk-button-group">
+    <%= render "govuk_publishing_components/components/button", {
+      text: "Save and continue",
+      name: "save_and_continue",
+      value: "Save and continue",
+      type: "submit",
+    } %>
+    <%= render "govuk_publishing_components/components/button", {
+      text: "Cancel",
+      name: "cancel",
+      value: "cancel",
+      href: content_block_manager.content_block_manager_content_block_documents_path,
+      secondary_solid: true,
+    } %>
+  </div>
 <% end %>
