change context of first create block page

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/new.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/new.html.erb
@@ -1,4 +1,4 @@
-<% content_for :context, product_name %>
+<% content_for :context, "Create a content block" %>
 
 <% if @schemas %>
   <% content_for :back_link do %>
