--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review.html.erb
@@ -1,4 +1,4 @@
-<% content_for :context, "Manage #{add_indefinite_article @content_block_edition.block_type.humanize.downcase}" %>
+<% content_for :context, "Create a content block" %>
 <% content_for :title, "Check your answers" %>
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
