change review page button copy to 'Confirm'

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review.html.erb
@@ -22,9 +22,9 @@
       <div class="govuk-button-group govuk-!-margin-bottom-6">
         <div>
           <%= render "govuk_publishing_components/components/button", {
-            text: "Accept and publish",
-            name: "accept_and_publish",
-            value: "Accept and publish",
+            text: "Confirm",
+            name: "confirm",
+            value: "Confirm",
             type: "submit",
           } %>
       <% end %>
