Update context in workflow
Rather than repeating ourselves, let’s use a helper method

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/schedule_publishing.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/schedule_publishing.html.erb
@@ -1,4 +1,4 @@
-<% content_for :context, "Manage #{add_indefinite_article @content_block_edition.document.block_type.humanize}" %>
+<% content_for :context, context %>
 <% content_for :title, "When do you want to publish the change?" %>
 <% content_for :title_margin_bottom, 4 %>
 <% content_for :back_link do %>
