--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review_links.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review_links.html.erb
@@ -1,4 +1,4 @@
-<% content_for :context, "Manage #{add_indefinite_article @content_block_document.block_type.humanize}" %>
+<% content_for :context, context %>
 <% content_for :title, "Where the change will appear" %>
 <% content_for :title_margin_bottom, 4 %>
 <% content_for :back_link do %>
