Change title for host editions table

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review_links.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review_links.html.erb
@@ -24,7 +24,7 @@
     <%= render(
           ContentBlockManager::ContentBlock::Document::Show::HostEditionsTableComponent.new(
             is_preview: true,
-            caption: "Content it appears in",
+            caption: "List of locations",
             host_content_items: @host_content_items,
             current_page: @page,
             order: @order,
