--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/confirmation.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/confirmation.html.erb
@@ -15,11 +15,18 @@
     <h2 class="govuk-heading-m">What happens next?</h2>
     <p><%= @paragraph_copy %> If you need any support or want to delete a content block you can raise a support request.
     </p>
-    <%= render "govuk_publishing_components/components/button", {
-        text: "View content block",
-        name: "view",
-        value: "view",
-        href: content_block_manager.content_block_manager_content_block_document_path(@content_block_edition.document.id),
-    } %>
+    <div class="govuk-button-group">
+      <%= render "govuk_publishing_components/components/button", {
+          text: "View content block",
+          name: "view",
+          value: "view",
+          href: content_block_manager.content_block_manager_content_block_document_path(@content_block_edition.document.id),
+      } %>
+      <%= render "govuk_publishing_components/components/button", {
+        text: "Raise a support request",
+        href: support_url,
+        secondary_solid: true,
+      } %>
+    </div>
   </div>
 </div>
