change heading of schedule publishing page

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/shared/_schedule_publishing.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/shared/_schedule_publishing.html.erb
@@ -1,5 +1,5 @@
 <% content_for :context, context %>
-<% content_for :title, "When do you want to publish the change?" %>
+<% content_for :title, "Select publish date" %>
 <% content_for :title_margin_bottom, 4 %>
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
