--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/shared/_schedule_publishing.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/shared/_schedule_publishing.html.erb
@@ -32,11 +32,13 @@
             value: "now",
             checked:  is_scheduled_param == "now",
             text: "Publish the edit now",
+            hint_text: "The edit will be made when you select publish and users will see it immediately.",
           },
           {
             value: "schedule",
             checked: is_scheduled_param == "schedule",
             text: "Schedule the edit for the future",
+            hint_text: "The edit will be published on a date and time you choose.",
             conditional: render("components/datetime_fields", {
               heading_size: "s",
               field_name: "scheduled_publication",
