--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/shared/_schedule_publishing.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/shared/_schedule_publishing.html.erb
@@ -86,9 +86,9 @@
       <div class="govuk-button-group">
         <div>
           <%= render "govuk_publishing_components/components/button", {
-            text: "Accept and publish",
-            name: "accept_and_publish",
-            value: "Accept and publish",
+            text: "Save and continue",
+            name: "save_and_continue",
+            value: "Save and continue",
             type: "submit",
           } %>
     <% end %>
