add values from params to date filter
passing the filters to the date component so it
can check what its values should be.

--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/date_filter_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/date_filter_component.html.erb
@@ -9,18 +9,21 @@
     name: "last_updated_from[1i]",
     label: "Year",
     width: 4,
+    value: date_value(:last_updated_from, "1i"),
   },
   month: {
     id: "last_updated_from_2i",
     name: "last_updated_from[2i]",
     label: "Month",
     width: 2,
+    value: date_value(:last_updated_from, "2i"),
   },
   day: {
     id: "last_updated_from_3i",
     name: "last_updated_from[3i]",
     label: "Day",
     width: 2,
+    value: date_value(:last_updated_from, "3i"),
   },
 }) %>
 <%= render("components/datetime_fields", {
@@ -34,17 +37,20 @@
     name: "last_updated_to[1i]",
     label: "Year",
     width: 4,
+    value: date_value(:last_updated_to, "1i"),
   },
   month: {
     id: "last_updated_to_2i",
     name: "last_updated_to[2i]",
     label: "Month",
     width: 2,
+    value: date_value(:last_updated_to, "2i"),
   },
   day: {
     id: "last_updated_to_3i",
     name: "last_updated_to[3i]",
     label: "Day",
     width: 2,
+    value: date_value(:last_updated_to, "3i"),
   },
 }) %>
