Hide licence in footer
The licence details make sense on public-facing sites, but we don’t need
them on the admin side. We’ve added a `hide_licence` option to the
layout_footer component, so let’s use it here.

--- a/app/views/layouts/design_system.html.erb
+++ b/app/views/layouts/design_system.html.erb
@@ -74,6 +74,7 @@
   </div>
 
   <%= render "govuk_publishing_components/components/layout_footer", {
+    hide_licence: true,
     navigation: [
       {
         title: "Support and feedback",
