Move delete review reminder link into edition summary sidebar actions
This change is expected to deliver an improved user experience, maintaining the general Whitehall design principle of pages outside of the edition summary supporting a single workflow step.

--- a/app/views/admin/review_reminders/confirm_destroy.html.erb
+++ b/app/views/admin/review_reminders/confirm_destroy.html.erb
@@ -14,7 +14,7 @@
           destructive: true,
         } %>
 
-        <%= link_to("Cancel", edit_admin_document_review_reminder_path(@document, @review_reminder), class: "govuk-link govuk-link--no-visited-state") %>
+        <%= link_to("Cancel", admin_edition_path(@document.latest_edition), class: "govuk-link govuk-link--no-visited-state") %>
       </div>
     <% end %>
   </section>
