--- a/app/views/admin/review_reminders/confirm_destroy.html.erb
+++ b/app/views/admin/review_reminders/confirm_destroy.html.erb
@@ -5,6 +5,7 @@
 
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-two-thirds">
+    <p class="govuk-body"><span class="govuk-!-font-weight-bold">Review date:</span> <%= @review_reminder.review_at.strftime("%-d %B %Y") %></p>
     <%= form_tag admin_document_review_reminder_path(@document, @review_reminder), method: :delete do %>
       <p class="govuk-body govuk-!-margin-bottom-7">Are you sure you want to delete this review reminder?</p>
 
