--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@ $govuk-page-width: 1140px;
 @import "./admin/views/filter";
 @import "./admin/views/govspeak-help";
 @import "./admin/views/groups-index";
+@import "./admin/views/host-content-update-event";
 @import "./admin/views/historical-accounts-index";
 @import "./admin/views/organisations-index";
 @import "./admin/views/organisations-edit";
