add page title to Content Block Manager home page
This sets the beginning of the page title - the
second half, the ` - GOV.UK Content Block Manager`
is set by the shared layout publishing component
[1] so it can't be changed.

The naming discussed on Slack
https://gds.slack.com/archives/C062Z1FA2ES/p1736500050626609?thread_ts=1736442857.222039&cid=C062Z1FA2ES
as making sense for now - it's what we refer to
the page as in guidance - but we may change later
if more suitable name becomes apparent.

[1]https://github.com/alphagov/govuk_publishing_components/blob/main/app/views/govuk_publishing_components/components/_layout_for_admin.html.erb

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
@@ -1,6 +1,8 @@
 
 <% content_for :title_margin_bottom, 6 %>
 
+<% content_for :page_title, "Home" %>
+
 <% if @error_summary_errors %>
   <%= render "govuk_publishing_components/components/error_summary", {
     title: "There is a problem",
