--- a/app/components/admin/editions/show/preview_component.html.erb
+++ b/app/components/admin/editions/show/preview_component.html.erb
@@ -6,7 +6,11 @@
     margin_bottom: 3,
   } %>
 
-  <% if versioning_completed %>
+  <% if edition.new_record? %>
+    <%= render "govuk_publishing_components/components/inset_text", {
+      text: "To see the changes and share a document preview link, save the document.",
+    } %>
+  <% else %>
     <p class="govuk-body">
       <%= preview_link(primary_locale_link_text, edition.public_url(draft: true)) %>
     </p>
@@ -55,9 +59,5 @@
         <% end %>
       <% end %>
     <% end %>
-  <% else %>
-    <%= render "govuk_publishing_components/components/inset_text", {
-      text: "To see the changes and share a document preview link, add a change note or mark the change type to minor.",
-    } %>
   <% end %>
 </section>
