--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -106,7 +106,7 @@
     <% end %>
   </div>
 
-  <% if !edition.new_record? && @edition.versioning_completed? %>
+  <% unless edition.new_record? %>
     <%= render "govuk_publishing_components/components/inset_text", {
       } do %>
       <p class="govuk-body">
